--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <a href="./01-intro-css/index.html">Clase 1</a>
-
+    <a href="./02-Propiedades-css/index.html">Clase 2</a>
 </body>
 </html>
